tests/snapshots/run_wpt_conformance__trtx_equal_float32_two_5D_inputs_with_identical_shapes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "equal.https.any.js",
    "equal float32 two 5D inputs with identical shapes",
    "trtx",
    Failed {
        msg: Some(
            "equal :: equal float32 two 5D inputs with identical shapes: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputB: [-3.5, -2, 0, 1, 1, 2, 3.5, 4, 5, -5.5, 5.5, -7, 7, -7.5, 9, -8.5, 9.5, 10.5, -11.5, 12.5, -12.5, 14.5, -16, 16.5 ...] (len=32); inputA: [-3.5, -2, -1, 0, 1, 2.5, 3, 4.5, 5, -5.5, 6, -6.5, 7, -7.5, 8, -8.5, 9, 10.5, -11, 12.5, -13, 14.5, -15, 16.5 ...] (len=32)\n  expected output: [1, 1, 0, 0, 1, 0, 0, 0, 1, 1 ...] (len=32)\n  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=32)\n  expected output full nd:\n[1, 1, 0, 0, 1, 0, 0, 0, 1, 1, ...] (len=32, shape=[2, 2, 2, 2, 2])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f32[2, 2, 2, 2, 2];\n    inputB: f32[2, 2, 2, 2, 2];\n  }\n\n  nodes {\n    [output] = equal(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
