tests/snapshots/run_wpt_conformance__trtx_equal_int32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "equal.https.any.js",
    "equal int32 4D tensors",
    "trtx",
    Failed {
        msg: Some(
            "equal :: equal int32 4D tensors: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputA: [1, -2, 3, -4, 5, -6, 7, -8, 9, -10, 11, -12]; inputB: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n  expected output: [1, 0, 1, 0, 1, 0, 1, 0, 1, 0 ...] (len=12)\n  actual output: [0, 0, 128, 63, 0, 0, 0, 0, 0, 0 ...] (len=12)\n  expected output full nd:\n[1, 0, 1, 0, 1, 0, 1, 0, 1, 0, ...] (len=12, shape=[1, 2, 2, 3])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 0, 0, 0, 0, ...] (len=12, shape=[1, 2, 2, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: i32[1, 2, 2, 3];\n    inputB: i32[1, 2, 2, 3];\n  }\n\n  nodes {\n    [output] = equal(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
